fix: Added wrapping to location buttons in home

--- a/less/main.less
+++ b/less/main.less
@@ -14,6 +14,10 @@ footer {
   margin-bottom: 20px;
 }
 
+.btn.btn-map {
+  white-space: normal;
+}
+
 .navbar-inverse {
   background-color: #7B1FA2;
   color: rgb(255, 255, 255, 0.87);
